adding improvements to allow local preprocessing, training and evaluating

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ yapf
 # API
 gcsfs
 google-cloud-storage
-mlflow
+mlflow==1.30.0
 s3fs
 
 # utilities
@@ -34,8 +34,8 @@ termcolor
 # tensorflow==2.10.0; sys_platform != 'darwin' # Windows & Ubuntu Intel chips
 
 #local tensorflow M1 setup - NOT FOR PRODUCTION!
-tensorflow-macos==2.8.0
-tensorflow-metal==0.4.0
+# tensorflow-macos==2.8.0
+# tensorflow-metal==0.4.0
 
 # Web App
 # Streamlit etc
