--- a/requirements.txt
+++ b/requirements.txt
@@ -29,9 +29,9 @@ memoized-property
 termcolor
 
 # Trick to install the version of Tensorflow depending on your processor: darwin == Mac, ARM == M1
-# tensorflow-macos==2.10.0; sys_platform == 'darwin' and 'ARM' in platform_version # Mac M-chips
-# tensorflow==2.10.0; sys_platform == 'darwin' and 'ARM' not in platform_version # Mac Intel chips
-# tensorflow==2.10.0; sys_platform != 'darwin' # Windows & Ubuntu Intel chips
+#tensorflow-macos==2.10.0; sys_platform == 'darwin' and 'ARM' in platform_version # Mac M-chips
+#tensorflow==2.10.0; sys_platform == 'darwin' and 'ARM' not in platform_version # Mac Intel chips
+tensorflow==2.8.0 #; sys_platform != 'darwin' # Windows & Ubuntu Intel chips
 
 #local tensorflow M1 setup - NOT FOR PRODUCTION!
 # tensorflow-macos==2.8.0
