--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,15 @@ google-cloud-storage
 mlflow==1.30.0
 s3fs
 
+# Fast API
+fastapi
+pytz
+uvicorn
+
+# tests
+httpx
+pytest-asyncio
+
 # utilities
 six>=1.14
 joblib
